# ic-verify-example

./: Cargo.toml  README.md
src/: main.rs
